istio-workshop-part2/circuitbreaker/connection pool/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - route:
    # - destination:
    #     host: recommendation
    #     subset: version-v1
    #   weight: 50
    - destination:
        host: recommendation
        subset: version-v2
      # weight: 50
